# ecn_visualodom

./: CMakeLists.txt  vo.cpp
include/ecn_visualodom/: ar_display.h  video_loop.h  visual_odom.h
ogre-simulator/: ogre.cfg  plugins.cfg  resources.cfg
src/: visual_odom.cpp
subject/: AVG_lab1.tex
